Add logout endpoint WIP
