# shared/src/commonMain/kotlin/org/sportsradar/sportsradarapp/shared/auth/data/UserLogoutRequest.kt
@@ -1,0 +1,8 @@
+package org.sportsradar.sportsradarapp.shared.auth.data
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+class UserLogoutRequest(
+    val refreshToken: String,
+)
